# drone_project

./: .gitignore  README  README.md
docs/setup/: qgc.md
software/python/sanity/: sanity_recieve.py  sanity_send.py  sanity_takeof_land.py
software/rust/: Cargo.toml
software/rust/crates/mavlink_io/: Cargo.toml
software/rust/crates/mavlink_io/src/: commands.rs  heartbeat.rs  lib.rs  offboard.rs  transport.rs  types.rs
software/rust/crates/mavlink_sanity/: Cargo.toml
software/rust/crates/ros2_connect/: Cargo.toml
tools/scripts/: ports.sh  run_qgc.sh  run_sitl.sh  useful_comands.md
