

[package]
name = "mavlink_io"
version = "0.1.0"
edition = "2021"

[dependencies]
mavlink = "0.17.1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] } # if you want async loops/timers
clap = { version = "4", features = ["derive"] }                             # if you want CLI args like --port 14550